--- a/diverges-app/package.json
+++ b/diverges-app/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
     "@types/node": "^20",
